add teste facilities

--- a/Facilities/Facilities.html
+++ b/Facilities/Facilities.html
@@ -28,6 +28,16 @@
     .pos_video a {
       margin-right: 10px;
     }
+    .video-section iframe {
+      height: 73%;
+    }
+    .lessons-section {
+      max-height: 80%;
+    }
+    .lessons-section {
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
   </style>
 </head>
 
@@ -43,7 +53,7 @@
       </div>
 
       <iframe id="videoFrame"
-        src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=3925cfa1-f13a-4d34-9e5e-6421ade8e864"
+        src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=c30c55c9-c0bd-4e37-8720-5a848e2090ed"
         frameborder="0" scrolling="no" allowfullscreen>
       </iframe>
 
@@ -54,43 +64,43 @@
     </div>
 
     <div class="lessons-section">
-      <h2>Aulas</h2>
+      <h2>Tópicos</h2>
 
       <div class="lesson"
-        data-src="">
-        <span class="lesson-title">Agendamentos de Reuniões com o CEO - Leandro | Sala Meeting</span><br><span class="lesson-duration">10 minutos</span></div>
+        data-src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=c30c55c9-c0bd-4e37-8720-5a848e2090ed">
+        <span class="lesson-title">Agendamentos de Reuniões com o CEO - Leandro | Sala Meeting</span><br><span class="lesson-duration">5 minutos</span></div>
+      <div class="lesson"
+        data-src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=3add4802-45b4-4bd7-a23e-534f58642452">
+        <span class="lesson-title">Recebimento e Envio de Correspondências, Documentos e Encomendas - Correios ou Motoboy/Uber Flash</span><br><span class="lesson-duration">5 minutos</span></div>
       <div class="lesson"
         data-src="">
-        <span class="lesson-title">Recebimento e Envio de Correspondências, Documentos e Encomendas - Correios ou Motoboy/Uber Flash</span><br><span class="lesson-duration">10 minutos</span></div>
+        <span class="lesson-title">Fluxo de Compras por chamado</span><br><span  class="lesson-duration">5 minutos</span></div>
       <div class="lesson"
         data-src="">
-        <span class="lesson-title">Fluxo de Compras por chamado</span><br><span  class="lesson-duration">10 minutos</span></div>
+        <span class="lesson-title">Solicitação de Passagens e Hotéis</span><br><span class="lesson-duration">5 minutos</span></div>
       <div class="lesson"
         data-src="">
-        <span class="lesson-title">Solicitação de Passagens e Hotéis</span><br><span class="lesson-duration">10 minutos</span></div>
+        <span class="lesson-title">Solicitações de Manutenção ou Reparos</span><br><span class="lesson-duration">5 minutos</span></div>
       <div class="lesson"
         data-src="">
-        <span class="lesson-title">Solicitações de Manutenção ou Reparos</span><br><span class="lesson-duration">10 minutos</span></div>
+        <span class="lesson-title">Limpeza e Organização dos Ambientes</span><br><span class="lesson-duration">5 minutos</span></div>
       <div class="lesson"
         data-src="">
-        <span class="lesson-title">Limpeza e Organização dos Ambientes</span><br><span class="lesson-duration">10 minutos</span></div>
+        <span class="lesson-title">Eventos Internos e Externos</span><br><span class="lesson-duration">5 minutos</span></div>
       <div class="lesson"
         data-src="">
-        <span class="lesson-title">Eventos Internos e Externos</span><br><span class="lesson-duration">10 minutos</span></div>
+        <span class="lesson-title">Controle de Acessos Internos</span><br><span class="lesson-duration">5 minutos</span></div>
       <div class="lesson"
         data-src="">
-        <span class="lesson-title">Controle de Acessos Internos</span><br><span class="lesson-duration">10 minutos</span></div>
-      <div class="lesson"
-        data-src="">
-        <span class="lesson-title">Estacionamento por Unidade</span><br><span class="lesson-duration">10 minutos</span></div>
+        <span class="lesson-title">Estacionamento por Unidade</span><br><span class="lesson-duration">5 minutos</span></div>
 
     </div>
   </div>
 
   <script>
     const videoLinks = [
-      "../Docs/Agendamentos de Reuniões com o CEO - Leandro  Sala Meeting.docx",
-      "",
+      "https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=c30c55c9-c0bd-4e37-8720-5a848e2090ed",
+      "https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=3add4802-45b4-4bd7-a23e-534f58642452",
       "",
       "",
       "",
