--- a/Central_Treinamentos.html
+++ b/Central_Treinamentos.html
@@ -103,6 +103,12 @@
         </div>
 
         <div class="card">
+            <h2>Facilities</h2>
+            <img src="./assets/img/Facilities.jpg" alt="Facilities">
+            <button id="BotaoFacilities" class="botaoAcesso">Acessar</button>
+        </div>
+
+        <div class="card">
             <h2>Tecnologia</h2>
             <img src="./assets/img/Redes de computadoras redes sociales _ Vector Premium.jpg" alt="Tecnologia">
             <button id="Botaotecnologiacentral" class="botaoAcesso">Acessar</button>
@@ -154,6 +160,10 @@
         
         document.getElementById('Botaolgpd').onclick = () => {
             window.location.href = "./LGPD/Aula_1.html";
+        };
+
+        document.getElementById('BotaoFacilities').onclick = () => {
+            window.location.href = "./Facilities/Aula.html";
         };
 
         document.getElementById('Botaotecnologiacentral').onclick = () => {
