--- a/Qualidade/Aulas.html
+++ b/Qualidade/Aulas.html
@@ -27,7 +27,7 @@
       <div class="menu_video">
         <a href="https://svriglobal.com/"><img class="logo" src="./../assets/img/logo-science-valley.png" alt="Logo Science"></a>
         <div class="menu_buttons">
-          <a class="BtnMenu" href="../../../Central_Treinamentos.html">Painel de Treinamentos</a>
+          <a class="BtnMenu" href="../Central_Treinamentos.html">Painel de Treinamentos</a>
         </div>
       </div>
 
