fix name facilities

--- a/Facilities/Aula.html
+++ b/Facilities/Aula.html
@@ -49,7 +49,7 @@
 
       <div class="pos_video">
         <a class="BtnMenu" href="#" data-index="-1">Anterior</a>
-        <a class="BtnMenu" href="#" data-index="1">Próximo Vídeo</a>
+        <a class="BtnMenu" href="#" data-index="1">Próximo</a>
       </div>
     </div>
 
