--- a/Central_Treinamentos.html
+++ b/Central_Treinamentos.html
@@ -98,51 +98,46 @@
 
         <div class="card">
             <h2>LGPD</h2>
-            <img src="./assets/img/Central de Proteção de Dados - RD Station.jpg" alt="LGPD">
+            <img src="./assets/img/LGPD.png" alt="LGPD">
             <button id="Botaolgpd" class="botaoAcesso">Acessar</button>
         </div>
 
         <div class="card">
             <h2>Facilities</h2>
-            <img src="./assets/img/Facilities.jpg" alt="Facilities">
+            <img src="./assets/img/Facilities.png" alt="Facilities">
             <button id="BotaoFacilities" class="botaoAcesso">Acessar</button>
         </div>
 
         <div class="card">
             <h2>Tecnologia</h2>
-            <img src="./assets/img/Redes de computadoras redes sociales _ Vector Premium.jpg" alt="Tecnologia">
+            <img src="./assets/img/Tecnologia.png" alt="Tecnologia">
             <button id="Botaotecnologiacentral" class="botaoAcesso">Acessar</button>
         </div>
 
         <div class="card">
             <h2>Qualidade</h2>
-            <img src="./assets/img/Qualidade.jpg" alt="Qualidade">
+            <img src="./assets/img/Qualidade.png" alt="Qualidade">
             <button id="BotaoQualidade" class="botaoAcesso">Acessar</button>
         </div>
 
         <div class="card">
             <h2>Academy</h2>
-            <img src="./assets/img/Academy.jpg" alt="Academy">
+            <img src="./assets/img/Academy.png" alt="Academy">
             <button id="BotaoAcademy" class="botaoAcesso">Acessar</button>
         </div>
 
         <div class="card">
             <h2>Sessão de Pops</h2>
-            <img src="./assets/img/Pops.png" alt="Sessão de Pops">
+            <img src="./assets/img/Sessao de Pops.png" alt="Sessão de Pops">
             <button id="Botaopop" class="botaoAcesso">Acessar</button>
         </div>
 
         <div class="card">
             <h2>Financeiro</h2>
-            <img src="./assets/img/FinanceiroPolo.jpg" alt="Financeiro">
+            <img src="./assets/img/Financeiro.png" alt="Financeiro">
             <button id="BotaoFinanceiroPolo" class="botaoAcesso">Acessar</button>
         </div>
 
-        <!-- <div class="card">
-            <h2>Procedimentos Ti</h2>
-            <img src="../assets/img/Procedimentos Ti.webp" alt="Procedimentos Ti">
-            <button id="BotaoProceTi" class="botaoAcesso">Acessar</button>
-        </div> -->
     </div>
 
     <script>
@@ -186,10 +181,6 @@
             window.location.href = "./Financeiro/Aulas.html";
         };
 
-
-        // document.getElementById('BotaoProceTi').onclick = () => {
-        //     alert('Você clicou em Procedimentosda TI!');
-        // };
     </script>
 </body>
 
