--- a/Integração/Menu_Integracao.html
+++ b/Integração/Menu_Integracao.html
@@ -27,9 +27,10 @@
             overflow: hidden;
         }
 
-        .card img {
+         .card img {
             width: 100%;
             object-fit: cover;
+            margin-top: 20px;
         }
 
         .card h2 {
@@ -70,8 +71,8 @@
 
     <div class="container">
         <div class="card">
-            <div class="testo">
-                <p><b><i>integração</i></b></p>
+             <div class="imgtec">
+                <img class="imgtec" src="../../assets/img/Integracao.png" id="tech">
             </div>
             
             <div class="Botoes_grid">
