--- a/Sessao_Pops/Menu_Pops.html
+++ b/Sessao_Pops/Menu_Pops.html
@@ -71,7 +71,7 @@
         <div class="card">
             
             <div class="imgtec">
-                <img class="imgtec" src="./../assets/img/Pops.png" id="tech">
+                <img class="imgtec" src="./../assets/img/Sessao de Pops.png" id="tech">
             </div>
             
             <div class="Botoes_grid">
