--- a/Tecnologia/Integração/Menu_Integração.html
+++ b/Tecnologia/Integração/Menu_Integração.html
@@ -70,7 +70,7 @@
     <div class="container">
         <div class="card">
             <div class="imgtec">
-                <img class="imgtec" src="../../assets/img/tecnologia.jpg" id="tech">
+                <img class="imgtec" src="../../assets/img/tecnologia.png" id="tech">
             </div>
             
             <div class="Botoes_grid">
@@ -87,9 +87,9 @@
                     <button id="BotaoPortalColab" class="botaovideo">PORTAL DO COLABORADOR</button>
                 </div>
 
-                <div class="Botoes">
+                <!-- <div class="Botoes">
                     <button id="BotaoPortalchamado" class="botaovideo">PORTAL DE CHAMADO</button>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -106,9 +106,9 @@
             window.location.href = "../Integração/Portal_Colaborador.html"
         };
 
-        document.getElementById("BotaoPortalchamado").onclick = function () {
-            window.location.href = "../Integração/Portal_Chamado.html"
-        };
+        // document.getElementById("BotaoPortalchamado").onclick = function () {
+        //     window.location.href = "../Integração/Portal_Chamado.html"
+        // };
     </script>
 </body>
 
