--- a/Tecnologia/Menu_Tecnologia.html
+++ b/Tecnologia/Menu_Tecnologia.html
@@ -70,7 +70,7 @@
     <div class="container">
         <div class="card">
             <div class="imgtec">
-                <img class="imgtec" src="../assets/img/tecnologia.jpg" id="tech">
+                <img class="imgtec" src="../assets/img/tecnologia.png" id="tech">
             </div>
             
             <div class="Botoes_grid">
