--- a/Tecnologia/Plataformas/CTMS/Menu_CTMS.html
+++ b/Tecnologia/Plataformas/CTMS/Menu_CTMS.html
@@ -70,7 +70,7 @@
     <div class="container">
         <div class="card">
             <div class="imgtec">
-                <img class="imgtec" src="../../../assets/img/Integração de Cursos.jpg" id="tech">
+                <img class="imgtec" src="../../../assets/img/Integracao.png" id="tech">
             </div>
             
             <div class="Botoes_grid">
