--- a/Tecnologia/Integração/Menu_Integração.html
+++ b/Tecnologia/Integração/Menu_Integração.html
@@ -70,7 +70,7 @@
     <div class="container">
         <div class="card">
             <div class="imgtec">
-                <img class="imgtec" src="../../assets/img/tecnologia.png" id="tech">
+                <img class="imgtec" src="../../assets/img/Tecnologia.png" id="tech">
             </div>
             
             <div class="Botoes_grid">
