--- a/Integração/Menu_Integracao.html
+++ b/Integração/Menu_Integracao.html
@@ -72,7 +72,7 @@
     <div class="container">
         <div class="card">
              <div class="imgtec">
-                <img class="imgtec" src="../../assets/img/Integracao.png" id="tech">
+                <img class="imgtec" src="../assets/img/integracao.png" id="tech">
             </div>
             
             <div class="Botoes_grid">
