--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
         .menu_pagina{
             margin-top: 20px;
         }
+        .menu_pagina {
+            display: flex;
+            justify-content: center; /* centraliza horizontal */
+            align-items: center;     /* centraliza vertical */
+        }
+
+        .img_menu {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     </style>
 </head>
 
@@ -62,9 +73,6 @@
             </div>
         </div>
     </header>
-
-    
-
 
     <div class="container">
         <div class="card">
