Fix css box central contato

--- a/Central_Treinamentos.html
+++ b/Central_Treinamentos.html
@@ -57,6 +57,10 @@
             font-size: 25px;    
         }
 
+        .menu_pagina{
+            border-radius: 8px;
+        }
+
         /* Responsividade */
         @media (max-width: 768px) {
             .container {
