--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         }
         .menu_pagina {
             display: flex;
-            justify-content: center; /* centraliza horizontal */
-            align-items: center;     /* centraliza vertical */
+            justify-content: center;
+            align-items: center;
         }
 
         .img_menu {
