--- a/Politicas_Diretrizes/Termo_de_Ciência_e_Concordância.html
+++ b/Politicas_Diretrizes/Termo_de_Ciência_e_Concordância.html
@@ -27,7 +27,7 @@
             background-color: white;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            width: 600px;
+            width: 800px;
             text-align: center;
             overflow: hidden;
         }
@@ -51,6 +51,8 @@
         }
         p{
             text-align: justify;
+            padding-bottom: 0px;
+            padding-top: 0px;
         }
   </style>
 
@@ -70,7 +72,7 @@
     <div class="container">
         <div class="card">
             <p>Visando reforçar nossas diretrizes de segurança da informação e prevenção a fraudes e golpes, solicitamos a leitura, assinatura e devolução do Termo de Ciência e Concordância – Prevenção a Fraudes e Golpes </p>
-            <P>Orientações importantes:</P>
+            <P style="text-align: center;">Orientações importantes:</P>
             <P>• O termo deve ser assinado (assinatura manual) imprimindo frente e verso;</P>
             <P>• Após a assinatura, o documento deve ser digitalizado ou fotografado de forma legível;</P>
             <P>• O arquivo deve ser enviado exclusivamente em formato PDF;</P>
