--- a/Tecnologia/Plataformas/Menu_Plataformas.html
+++ b/Tecnologia/Plataformas/Menu_Plataformas.html
@@ -22,7 +22,7 @@
             background-color: white;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            width: 600px;
+            width: 700px;
             text-align: center;
             overflow: hidden;
         }
@@ -87,6 +87,9 @@
                     <button id="BotaoSAP" class="botaovideo">SAP</button>
                 </div>
                 
+                <div class="Botoes">
+                    <button id="BotaoGLPI" class="botaovideo">GLPI</button>
+                </div>
 
             </div>
         </div>
@@ -102,6 +105,10 @@
 
         document.getElementById("BotaoSAP").onclick = function () {
             window.location.href = "../Plataformas/SAP/Aula.html"
+        };
+
+        document.getElementById("BotaoGLPI").onclick = function () {
+            window.location.href = "../Plataformas/GLPI/Aula.html"
         };
     </script>
 </body>
