UPDATE termos de conduta e etica

--- a/Politicas_Diretrizes/Codigodeconduta.html
+++ b/Politicas_Diretrizes/Codigodeconduta.html
@@ -72,11 +72,11 @@
             <p> O Código de Conduta e Ética e necessario ser baixado, preenchido e entregue no departamento de Recursos Humanos (RH) </p>
                 <div class="videoTreinamento">
                     <iframe class="videoTreinamento"
-                    src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=652fa5e0-635d-442e-998c-1477d6bcd1f7" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="Código de Conduta e Ética"></iframe>
+                    src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=61e2c6f5-5950-4d99-9b9a-63b2ee442751" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="Código de Conduta e Ética"></iframe>
                 </div>
                 
                 <div class="Botoes_grid">
-                    <a class="botaovideo" href="../Politicas_Diretrizes/Código de Conduta e Ética.pdf" download="Código de Conduta e Ética.pdf">Download</a>
+                    <a class="botaovideo" href="./Código de Conduta e Ética - Science Valley.pdf" download="Código de Conduta e Ética - Science Valley.pdf">Download</a>
                     
                     <button class="botaovideo" id="painelTreinamento" class="botao-link">Painel de Treinamento</button>
                 </div>
