ADD Polotrial na qualidade

--- a/Qualidade/Aulas.html
+++ b/Qualidade/Aulas.html
@@ -48,8 +48,10 @@
       <div class="lesson" data-src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=04dc508c-9b16-4ecb-b57b-a6ef7ffd3039&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"><span class="lesson-title">Aula 1: CEP - CONEP</span><br><span class="lesson-duration">10 minutos</span></div>
       <div class="lesson" data-src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=1866f4c2-2383-4dfd-8cdf-c9b780789256&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"><span class="lesson-title">Aula 2: Cadastro</span><br><span class="lesson-duration">10 minutos</span></div>
       <div class="lesson" data-src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=9a36730d-941d-464c-a303-d7231a0aaedc&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"><span class="lesson-title">Aula 3: Folha de rosto</span><br><span class="lesson-duration">10 minutos</span></div>
-      <div class="lesson" data-src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=e54c94d7-b639-46b9-8114-f8162a67d8b6&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"><span class="lesson-title">Aula 4: Relatórios</span><br><span class="lesson-duration">10 minutos</span></div>      
-      <div class="lesson" data-src="../Qualidade/Certificado_Qualidade.html"><a href="../Qualidade/Certificado_Qualidade.html">Formulario<br>5 minutos</a></div>
+      <div class="lesson" data-src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=e54c94d7-b639-46b9-8114-f8162a67d8b6&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"><span class="lesson-title">Aula 4: Relatórios</span><br><span class="lesson-duration">10 minutos</span></div>
+      <div class="lesson" data-src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=192d1d80-731f-46c0-9b78-2d8d084d4841&embed=%7B%22ust%22%3Afalse%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"><span class="lesson-title">Aula 5: PoloTrial</span><br><span class="lesson-duration">24 minutos</span></div>      
+    
+      <div class="lesson" data-src="https://forms.office.com/Pages/ResponsePage.aspx?id=prA6w5_bT0u6yRmFp-cite-u8S2Hbf1PhF3SjS42Q_VUQURPSTY3T1JQN1dMRTBIUDFQMVJBUzM1Sy4u&embed=true"><span class="lesson-title"></span>Formulario PoloTrial<br><span class="lesson-duration">10 minutos</span></div>
 
     </div>
   </div>
@@ -59,7 +61,9 @@
         "https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=04dc508c-9b16-4ecb-b57b-a6ef7ffd3039&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create",
         "https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=1866f4c2-2383-4dfd-8cdf-c9b780789256&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create",
         "https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=9a36730d-941d-464c-a303-d7231a0aaedc&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create",
-        "https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=e54c94d7-b639-46b9-8114-f8162a67d8b6&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
+        "https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=e54c94d7-b639-46b9-8114-f8162a67d8b6&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create",
+        "https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=192d1d80-731f-46c0-9b78-2d8d084d4841&embed=%7B%22ust%22%3Afalse%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create",
+        "https://forms.office.com/Pages/ResponsePage.aspx?id=prA6w5_bT0u6yRmFp-cite-u8S2Hbf1PhF3SjS42Q_VUQURPSTY3T1JQN1dMRTBIUDFQMVJBUzM1Sy4u&embed=true"
     ];
 
     let currentIndex = 0;
