--- a/Tecnologia/Plataformas/SAP/Aula.html
+++ b/Tecnologia/Plataformas/SAP/Aula.html
@@ -42,12 +42,14 @@
 
       <div class="lesson" data-src="https://drive.google.com/file/d/1W8hRdok9ASCNr8Y_p7V_tw6qZrTD3o3r/preview"><span class="lesson-title">SAP Business One</span><br><span class="lesson-duration">10 minutos</span></div>
       <!-- <div class="lesson" data-src="../SAP/Certificado_Sap.html"><a href="../SAP/Certificado_Sap.html">Formulario<br>5 minutos</a></div> -->
-
+      <div class="lesson"> <a href="https://ead.ramo.com.br/login/"><span class="lesson-title">Plataforma de treinamento Ramos</span></a> <br> </div>
+    </div>
     </div>
   </div>
 
   <script>
     const videoLinks = [
+        "https://drive.google.com/file/d/1W8hRdok9ASCNr8Y_p7V_tw6qZrTD3o3r/preview",
         "https://drive.google.com/file/d/1W8hRdok9ASCNr8Y_p7V_tw6qZrTD3o3r/preview"
     ];
 
